feat: add universal functions

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -22,7 +22,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 59,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "# Using a python list\n",
         "np.array([1, 2, 3, 4])"
       ],
-      "execution_count": 60,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,7 +70,7 @@
             "text/plain": "array([1, 2, 3, 4])"
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 15
         }
       ]
     },
@@ -89,7 +89,7 @@
         "# Using \"arange\" function\n",
         "np.arange(10)"
       ],
-      "execution_count": 61,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
             "text/plain": "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 16
         }
       ]
     },
@@ -116,7 +116,7 @@
         "# Using \"zeros\" function\n",
         "np.zeros((2, 3, 2))"
       ],
-      "execution_count": 62,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
             "text/plain": "array([[[0., 0.],\n        [0., 0.],\n        [0., 0.]],\n\n       [[0., 0.],\n        [0., 0.],\n        [0., 0.]]])"
           },
           "metadata": {},
-          "execution_count": 62
+          "execution_count": 17
         }
       ]
     },
@@ -143,7 +143,7 @@
         "# Using \"ones\" function\n",
         "np.ones((3, 4))"
       ],
-      "execution_count": 63,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
             "text/plain": "array([[1., 1., 1., 1.],\n       [1., 1., 1., 1.],\n       [1., 1., 1., 1.]])"
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 18
         }
       ]
     },
@@ -170,7 +170,7 @@
         "# Using \"linspace\" function\n",
         "np.linspace(0, 1, 11)"
       ],
-      "execution_count": 64,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
             "text/plain": "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 19
         }
       ]
     },
@@ -204,7 +204,7 @@
         "one_dimension_array = np.array([1, 2, 3, 4, 5])\n",
         "one_dimension_array.shape"
       ],
-      "execution_count": 65,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,13 +212,13 @@
             "text/plain": "(5,)"
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 20
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -227,7 +227,7 @@
             "text/plain": "(1, 5)"
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 21
         }
       ],
       "source": [
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -247,7 +247,7 @@
             "text/plain": "False"
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 22
         }
       ],
       "source": [
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -266,7 +266,7 @@
             "text/plain": "array([[1, 2, 3, 4, 5]])"
           },
           "metadata": {},
-          "execution_count": 68
+          "execution_count": 23
         }
       ],
       "source": [
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -287,7 +287,7 @@
             "text/plain": "True"
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 24
         }
       ],
       "source": [
@@ -304,16 +304,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[[0.65085465, 0.23172832],\n        [0.25821324, 0.82831371],\n        [0.86560912, 0.41165905]],\n\n       [[0.93139945, 0.76478715],\n        [0.02043667, 0.98179204],\n        [0.99082722, 0.81915868]]])"
+            "text/plain": "array([[[1.58550226e-01, 5.21199239e-01],\n        [1.86042027e-01, 3.46493241e-01],\n        [1.16632535e-02, 6.85605871e-01]],\n\n       [[2.29623163e-04, 2.64774974e-01],\n        [6.75114512e-01, 3.09988444e-01],\n        [4.93028140e-01, 3.59521415e-01]]])"
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 25
         }
       ],
       "source": [
@@ -324,21 +324,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[0.25821324, 0.86560912]])"
+            "text/plain": "array([[0.18604203, 0.01166325]])"
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 26
         }
       ],
       "source": [
         "# Using slicing with int and [:] notation\n",
         "three_dimensional_array[:1,1:,0]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Arithmetic operations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "array      = [0 1 2 3 4]\narray + 5  = [5 6 7 8 9]\narray - 1  = [-1  0  1  2  3]\narray / 5  = [0.  0.2 0.4 0.6 0.8]\narray // 2 = [0 0 1 1 2]\n-array     = [ 0 -1 -2 -3 -4]\narray ** 2 = [ 0  1  4  9 16]\narray % 2  = [0 1 0 1 0]\n"
+        }
+      ],
+      "source": [
+        "array = np.arange(5)\n",
+        "print('array      =', array)\n",
+        "print('array + 5  =', array + 5)\n",
+        "print('array - 1  =', array - 1)\n",
+        "print('array / 5  =', array / 5)\n",
+        "print('array // 2 =', array // 2)\n",
+        "print('-array     =', -array)\n",
+        "print('array ** 2 =', array ** 2)\n",
+        "print('array % 2  =', array % 2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "| Operator | Universal functions (ufunc) |\n",
+        "| -------- | -------------------------- |\n",
+        "|``+``     | ``np.add()``               |\n",
+        "|``-``     | ``np.subtract()``          |\n",
+        "|``*``     | ``np.multiply()``          |\n",
+        "\n",
+        "**Note**: Universal functions are executed using compiled C code."
       ]
     }
   ],
