feat: add performance

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -22,7 +22,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 14,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -62,7 +62,7 @@
         "# Using a python list\n",
         "np.array([1, 2, 3, 4])"
       ],
-      "execution_count": 15,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -70,7 +70,7 @@
             "text/plain": "array([1, 2, 3, 4])"
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 50
         }
       ]
     },
@@ -89,7 +89,7 @@
         "# Using \"arange\" function\n",
         "np.arange(10)"
       ],
-      "execution_count": 16,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
             "text/plain": "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 51
         }
       ]
     },
@@ -116,7 +116,7 @@
         "# Using \"zeros\" function\n",
         "np.zeros((2, 3, 2))"
       ],
-      "execution_count": 17,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +124,7 @@
             "text/plain": "array([[[0., 0.],\n        [0., 0.],\n        [0., 0.]],\n\n       [[0., 0.],\n        [0., 0.],\n        [0., 0.]]])"
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 52
         }
       ]
     },
@@ -143,7 +143,7 @@
         "# Using \"ones\" function\n",
         "np.ones((3, 4))"
       ],
-      "execution_count": 18,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -151,7 +151,7 @@
             "text/plain": "array([[1., 1., 1., 1.],\n       [1., 1., 1., 1.],\n       [1., 1., 1., 1.]])"
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 53
         }
       ]
     },
@@ -170,7 +170,7 @@
         "# Using \"linspace\" function\n",
         "np.linspace(0, 1, 11)"
       ],
-      "execution_count": 19,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +178,7 @@
             "text/plain": "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 54
         }
       ]
     },
@@ -204,7 +204,7 @@
         "one_dimension_array = np.array([1, 2, 3, 4, 5])\n",
         "one_dimension_array.shape"
       ],
-      "execution_count": 20,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -212,13 +212,13 @@
             "text/plain": "(5,)"
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 55
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -227,7 +227,7 @@
             "text/plain": "(1, 5)"
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 56
         }
       ],
       "source": [
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -247,7 +247,7 @@
             "text/plain": "False"
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 57
         }
       ],
       "source": [
@@ -257,7 +257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
@@ -266,7 +266,7 @@
             "text/plain": "array([[1, 2, 3, 4, 5]])"
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 58
         }
       ],
       "source": [
@@ -278,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [
         {
@@ -287,7 +287,7 @@
             "text/plain": "True"
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 59
         }
       ],
       "source": [
@@ -304,16 +304,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[[1.58550226e-01, 5.21199239e-01],\n        [1.86042027e-01, 3.46493241e-01],\n        [1.16632535e-02, 6.85605871e-01]],\n\n       [[2.29623163e-04, 2.64774974e-01],\n        [6.75114512e-01, 3.09988444e-01],\n        [4.93028140e-01, 3.59521415e-01]]])"
+            "text/plain": "array([[[3.28955272e-01, 8.80285593e-01],\n        [4.69612788e-01, 9.10412863e-01],\n        [7.40779300e-01, 4.79061301e-01]],\n\n       [[3.34017539e-01, 9.89761214e-01],\n        [7.47489763e-01, 1.18592032e-01],\n        [5.09170069e-01, 7.29388090e-04]]])"
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 60
         }
       ],
       "source": [
@@ -324,16 +324,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[0.18604203, 0.01166325]])"
+            "text/plain": "array([[0.46961279, 0.7407793 ]])"
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 61
         }
       ],
       "source": [
@@ -350,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -383,6 +383,97 @@
         "|``*``     | ``np.multiply()``          |\n",
         "\n",
         "**Note**: Universal functions are executed using compiled C code."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 63,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "[ 1.          2.71828183  7.3890561  20.08553692 54.59815003]\n[      -inf 0.         0.69314718 1.09861229 1.38629436]\n[0.         1.         1.41421356 1.73205081 2.        ]\n[False False False False False]\n"
+        }
+      ],
+      "source": [
+        "# Other ufuncs\n",
+        "print(np.exp(array))                # Exponential\n",
+        "print(np.log(array))                # Natural logarithm\n",
+        "print(np.sqrt(array))               # Square root\n",
+        "print(np.greater(array, array))     # Greater"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Performance"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "209 ms ± 4.56 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+        }
+      ],
+      "source": [
+        "%%timeit\n",
+        "array = np.arange(1000000)\n",
+        "zeros_array = np.zeros(1000000)\n",
+        "\n",
+        "i = 0\n",
+        "for item in array:\n",
+        "    zeros_array[i] = item + item\n",
+        "    i += 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "363 ns ± 3.28 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+        }
+      ],
+      "source": [
+        "%%timeit\n",
+        "array + array"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Statistics and randomness"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 66,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "4.5\n4.5\n3.6\n[0.74718604 0.80396779 0.66900159 0.27971039 0.06131803 0.41389705\n 0.46005109 0.23709932 0.81444187 0.60360689]\n"
+        }
+      ],
+      "source": [
+        "array = np.arange(10)\n",
+        "\n",
+        "print(np.mean(array))\n",
+        "print(np.median(array))\n",
+        "print(np.percentile(array, 40))\n",
+        "print(np.random.random(10))"
       ]
     }
   ],
