feat: fix gross feature

--- a/notes/numpy.ipynb
+++ b/notes/numpy.ipynb
@@ -67,7 +67,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([1, 2, 3, 4])"
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
           },
           "metadata": {},
           "execution_count": 2
@@ -94,7 +96,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            "text/plain": [
+              "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
           },
           "metadata": {},
           "execution_count": 3
@@ -121,7 +125,15 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[[0., 0.],\n        [0., 0.],\n        [0., 0.]],\n\n       [[0., 0.],\n        [0., 0.],\n        [0., 0.]]])"
+            "text/plain": [
+              "array([[[0., 0.],\n",
+              "        [0., 0.],\n",
+              "        [0., 0.]],\n",
+              "\n",
+              "       [[0., 0.],\n",
+              "        [0., 0.],\n",
+              "        [0., 0.]]])"
+            ]
           },
           "metadata": {},
           "execution_count": 4
@@ -148,7 +160,11 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[1., 1., 1., 1.],\n       [1., 1., 1., 1.],\n       [1., 1., 1., 1.]])"
+            "text/plain": [
+              "array([[1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1.]])"
+            ]
           },
           "metadata": {},
           "execution_count": 5
@@ -175,7 +191,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
+            "text/plain": [
+              "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
+            ]
           },
           "metadata": {},
           "execution_count": 6
@@ -209,7 +227,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "(5,)"
+            "text/plain": [
+              "(5,)"
+            ]
           },
           "metadata": {},
           "execution_count": 7
@@ -224,7 +244,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "(1, 5)"
+            "text/plain": [
+              "(1, 5)"
+            ]
           },
           "metadata": {},
           "execution_count": 8
@@ -244,7 +266,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "False"
+            "text/plain": [
+              "False"
+            ]
           },
           "metadata": {},
           "execution_count": 9
@@ -263,7 +287,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[1, 2, 3, 4, 5]])"
+            "text/plain": [
+              "array([[1, 2, 3, 4, 5]])"
+            ]
           },
           "metadata": {},
           "execution_count": 10
@@ -284,7 +310,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "True"
+            "text/plain": [
+              "True"
+            ]
           },
           "metadata": {},
           "execution_count": 11
@@ -310,7 +338,15 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[[0.83214817, 0.6305267 ],\n        [0.05150499, 0.23947383],\n        [0.11254181, 0.6001168 ]],\n\n       [[0.02705776, 0.08220334],\n        [0.31697179, 0.49969917],\n        [0.07983469, 0.6798843 ]]])"
+            "text/plain": [
+              "array([[[0.63515796, 0.77051372],\n",
+              "        [0.19262872, 0.48117657],\n",
+              "        [0.33233748, 0.33576795]],\n",
+              "\n",
+              "       [[0.37084233, 0.58662941],\n",
+              "        [0.56534024, 0.52532259],\n",
+              "        [0.65624327, 0.70750345]]])"
+            ]
           },
           "metadata": {},
           "execution_count": 12
@@ -330,7 +366,9 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "array([[0.05150499, 0.11254181]])"
+            "text/plain": [
+              "array([[0.19262872, 0.33233748]])"
+            ]
           },
           "metadata": {},
           "execution_count": 13
@@ -356,7 +394,9 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "array      = [0 1 2 3 4]\narray + 5  = [5 6 7 8 9]\narray - 1  = [-1  0  1  2  3]\narray / 5  = [0.  0.2 0.4 0.6 0.8]\narray // 2 = [0 0 1 1 2]\n-array     = [ 0 -1 -2 -3 -4]\narray ** 2 = [ 0  1  4  9 16]\narray % 2  = [0 1 0 1 0]\n"
+          "text": [
+            "array      = [0 1 2 3 4]\narray + 5  = [5 6 7 8 9]\narray - 1  = [-1  0  1  2  3]\narray / 5  = [0.  0.2 0.4 0.6 0.8]\narray // 2 = [0 0 1 1 2]\n-array     = [ 0 -1 -2 -3 -4]\narray ** 2 = [ 0  1  4  9 16]\narray % 2  = [0 1 0 1 0]\n"
+          ]
         }
       ],
       "source": [
@@ -393,7 +433,9 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "[ 1.          2.71828183  7.3890561  20.08553692 54.59815003]\n[      -inf 0.         0.69314718 1.09861229 1.38629436]\n[0.         1.         1.41421356 1.73205081 2.        ]\n[False False False False False]\n"
+          "text": [
+            "[ 1.          2.71828183  7.3890561  20.08553692 54.59815003]\n[      -inf 0.         0.69314718 1.09861229 1.38629436]\n[0.         1.         1.41421356 1.73205081 2.        ]\n[False False False False False]\n"
+          ]
         }
       ],
       "source": [
@@ -419,7 +461,9 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "215 ms ± 9.53 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+          "text": [
+            "267 ms ± 10.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+          ]
         }
       ],
       "source": [
@@ -435,13 +479,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "373 ns ± 3.73 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+          "text": [
+            "453 ns ± 14 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+          ]
         }
       ],
       "source": [
@@ -458,13 +504,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "4.5\n4.5\n3.6\n[0.74718604 0.80396779 0.66900159 0.27971039 0.06131803 0.41389705\n 0.46005109 0.23709932 0.81444187 0.60360689]\n"
+          "text": [
+            "4.5\n4.5\n3.6\n[0.71917218 0.62322931 0.05091825 0.62256467 0.97585516 0.51035595\n 0.67812138 0.85063778 0.81225542 0.77839264]\n"
+          ]
         }
       ],
       "source": [
@@ -484,8 +532,13 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "name": "python36964bitenvvirtualenv8e9c7dc6d7d449d1a8f0f012847d5d9f",
-      "display_name": "Python 3.6.9 64-bit ('.env': virtualenv)"
+      "name": "Python 3.8.5 64-bit ('.env': venv)",
+      "display_name": "Python 3.8.5 64-bit ('.env': venv)",
+      "metadata": {
+        "interpreter": {
+          "hash": "1eda70eb63267d6a504bae4891a6683f6e75cf0d73d057bbe2ec988b5593408d"
+        }
+      }
     }
   },
   "nbformat": 4,
