feat: modeling and evaluation first iteration

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import dependencies\n",
+    "# Import libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
