feat: feature analysis

--- a/notes/numpy.ipynb
+++ b/notes/numpy.ipynb
@@ -20,9 +20,10 @@
         "colab": {}
       },
       "source": [
+        "# Import library\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": 97,
       "outputs": []
     },
     {
@@ -60,9 +61,9 @@
       },
       "source": [
         "# Using a python list\n",
-        "np.array([1, 2, 3, 4])"
+        "np.array(object=[1, 2, 3, 4])"
       ],
-      "execution_count": 2,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -72,7 +73,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 79
         }
       ]
     },
@@ -89,9 +90,9 @@
       },
       "source": [
         "# Using \"arange\" function\n",
-        "np.arange(10)"
+        "np.arange(start=10)"
       ],
-      "execution_count": 3,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 80
         }
       ]
     },
@@ -118,9 +119,9 @@
       },
       "source": [
         "# Using \"zeros\" function\n",
-        "np.zeros((2, 3, 2))"
+        "np.zeros(shape=(2, 3, 2))"
       ],
-      "execution_count": 4,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +137,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 81
         }
       ]
     },
@@ -153,9 +154,9 @@
       },
       "source": [
         "# Using \"ones\" function\n",
-        "np.ones((3, 4))"
+        "np.ones(shape=(3, 4))"
       ],
-      "execution_count": 5,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -167,7 +168,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 82
         }
       ]
     },
@@ -184,9 +185,9 @@
       },
       "source": [
         "# Using \"linspace\" function\n",
-        "np.linspace(0, 1, 11)"
+        "np.linspace(start=0, stop=1, num=11)"
       ],
-      "execution_count": 6,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +197,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 83
         }
       ]
     },
@@ -219,10 +220,10 @@
       },
       "source": [
         "# Get the dimension of an array (one dimension)\n",
-        "one_dimension_array = np.array([1, 2, 3, 4, 5])\n",
+        "one_dimension_array = np.array(object=[1, 2, 3, 4, 5])\n",
         "one_dimension_array.shape"
       ],
-      "execution_count": 7,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,13 +233,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 84
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [
         {
@@ -249,18 +250,18 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 85
         }
       ],
       "source": [
         "# Get the dimension of an array (two dimension)\n",
-        "two_dimension_array = np.array([[1, 2, 3, 4, 5]])\n",
+        "two_dimension_array = np.array(object=[[1, 2, 3, 4, 5]])\n",
         "two_dimension_array.shape"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [
         {
@@ -271,17 +272,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 86
         }
       ],
       "source": [
         "# Compare two arrays\n",
-        "np.array_equal(one_dimension_array, two_dimension_array)"
+        "np.array_equal(a1=one_dimension_array, a2=two_dimension_array)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [
         {
@@ -292,7 +293,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 87
         }
       ],
       "source": [
@@ -304,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [
         {
@@ -315,12 +316,12 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 88
         }
       ],
       "source": [
         "# Compare two arrays\n",
-        "np.array_equal(reshaped_array, two_dimension_array)"
+        "np.array_equal(a1=reshaped_array, a2=two_dimension_array)"
       ]
     },
     {
@@ -332,24 +333,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 89,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[[0.63515796, 0.77051372],\n",
-              "        [0.19262872, 0.48117657],\n",
-              "        [0.33233748, 0.33576795]],\n",
+              "array([[[0.70515405, 0.81089825],\n",
+              "        [0.89456756, 0.31277029],\n",
+              "        [0.77067591, 0.07898317]],\n",
               "\n",
-              "       [[0.37084233, 0.58662941],\n",
-              "        [0.56534024, 0.52532259],\n",
-              "        [0.65624327, 0.70750345]]])"
+              "       [[0.06963977, 0.37185172],\n",
+              "        [0.91676208, 0.46179238],\n",
+              "        [0.5804499 , 0.60262179]]])"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 89
         }
       ],
       "source": [
@@ -360,18 +361,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 90,
       "metadata": {},
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.19262872, 0.33233748]])"
+              "array([[0.89456756, 0.77067591]])"
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 90
         }
       ],
       "source": [
@@ -388,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 91,
       "metadata": {},
       "outputs": [
         {
@@ -400,15 +401,16 @@
         }
       ],
       "source": [
-        "array = np.arange(5)\n",
-        "print('array      =', array)\n",
-        "print('array + 5  =', array + 5)\n",
-        "print('array - 1  =', array - 1)\n",
-        "print('array / 5  =', array / 5)\n",
-        "print('array // 2 =', array // 2)\n",
-        "print('-array     =', -array)\n",
-        "print('array ** 2 =', array ** 2)\n",
-        "print('array % 2  =', array % 2)"
+        "array = np.arange(start=5)\n",
+        "\n",
+        "print(\"array      =\", array)\n",
+        "print(\"array + 5  =\", array + 5)\n",
+        "print(\"array - 1  =\", array - 1)\n",
+        "print(\"array / 5  =\", array / 5)\n",
+        "print(\"array // 2 =\", array // 2)\n",
+        "print(\"-array     =\", -array)\n",
+        "print(\"array ** 2 =\", array ** 2)\n",
+        "print(\"array % 2  =\", array % 2)"
       ]
     },
     {
@@ -427,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [
         {
@@ -455,21 +457,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "267 ms ± 10.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+            "246 ms ± 3.15 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
           ]
         }
       ],
       "source": [
         "%%timeit\n",
-        "array = np.arange(1000000)\n",
-        "zeros_array = np.zeros(1000000)\n",
+        "array = np.arange(start=1000000)\n",
+        "zeros_array = np.zeros(shape=1000000)\n",
         "\n",
         "i = 0\n",
         "for item in array:\n",
@@ -479,14 +481,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 94,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "453 ns ± 14 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+            "391 ns ± 5.96 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
           ]
         }
       ],
@@ -504,24 +506,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 95,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4.5\n4.5\n3.6\n[0.71917218 0.62322931 0.05091825 0.62256467 0.97585516 0.51035595\n 0.67812138 0.85063778 0.81225542 0.77839264]\n"
+            "4.5\n4.5\n3.6\n[0.77365046 0.84302356 0.2555429  0.5318994  0.46716859 0.22768869\n 0.15814208 0.90560498 0.34638337 0.97627776]\n"
           ]
         }
       ],
       "source": [
-        "array = np.arange(10)\n",
+        "array = np.arange(start=10)\n",
         "\n",
-        "print(np.mean(array))\n",
-        "print(np.median(array))\n",
-        "print(np.percentile(array, 40))\n",
-        "print(np.random.random(10))"
+        "print(np.mean(a=array))\n",
+        "print(np.median(a=array))\n",
+        "print(np.percentile(a=array, q=40))\n",
+        "print(np.random.random(size=10))"
       ]
     }
   ],
